2010-04-20  James Youngman  <jay@gnu.org>

	Include <errno.h> unconditionally where we need it.
	* admin.cc: Include <errno.h> instead of "err_no.h".
	* pfile.cc: Likewise.
	* cssc.h: Likewise.
	* file.cc: Likewise.
	* get.cc: Likewise.
	* run.cc: Likewise.
	* quit.cc: Likewise.
	* sccsfile.cc: Likewise.
	* sf-delta.cc: Likewise.
	* what.cc: Likewise.
	* err_no.h: Remove useless file.
	* Makefile.am (noinst_HEADERS): Remove err_no.h.

	Instead of linking all objects explicitly, use a library.
	* Makefile.am (noinst_LIBRARIES): Build new library libcssc.a.
	(libcssc_a_SOURCES): list the source files for the library.
	(common_sources): Remove unused variable.
	(sname_srcs): Likewise.
	(sfile_srcs): Likewise.
	(mod_srcs): Likewise.
	(moddelta_srcs): Likewise.
	(newdelta_srcs): Likewise.
	(get_LDADD): Add the new library libcssc.a.
	(delta_LDADD): Likewise.
	(admin_LDADD): Likewise.
	(prs_LDADD): Likewise.
	(what_LDADD): Likewise.
	(unget_LDADD): Likewise.
	(sact_LDADD): Likewise.
	(cdc_LDADD): Likewise.
	(rmdel_LDADD): Likewise.
	(prt_LDADD): Likewise.
	(val_LDADD): Likewise.
	(what_SOURCES): Remove object files which are now in libcssc.a.
	(sact_SOURCES): Likewise.
	(unget_SOURCES): Likewise.
	(prt_SOURCES): Likewise.
	(prs_SOURCES): Likewise.
	(get_SOURCES): Likewise.
	(rmdel_SOURCES): Likewise.
	(cdc_SOURCES): Likewise.
	(admin_SOURCES): Likewise.
	(delta_SOURCES): Likewise.
	(val_SOURCES): Likewise.

2010-04-19  James Youngman  <jay@gnu.org>

	Implement myset<T> with std::set<T>.
	* myset.h (myset): Switch to implementing with std::set.  This
	should reduce the O(N) operations to O(log(N)).

	Use the standard string class.
	* mystring.h: Assume the availability of the <string> header, so
	that mystring is always a typedef for std::string.
	* mystring.cc: Delete.
	* Makefile.am (sname_srcs): Delete mystring.cc.

	Assume support for the std namespace.
	* configure.ac: Don't check for the 'std' namespace.  Don't
	#define STD_NAMESPACE.